<resources>
    <string name="action_settings">Configuracion</string>
    <string name="hello_world">Bienvenidos a ITALKYOU</string>
    <string name="app_name">iTalkYou</string>
    <string name="mn_espanol">Español</string>
    <string name="mn_ingles">Ingles</string>
    <string name="mn_contacto">Contacto</string>
    <string name="mn_configuracion">Perfil</string>
    <string name="mn_saldo">Saldo</string>
    <string name="mn_redireccionar">Redireccionar</string>
    <string name="mn_agendarsms">Agendar SMS</string>
    <string name="mn_cerrar">Cerrar Sesion</string>
    <string name="mn_buscar">Buscar</string>
    <string name="mn_buscar_contacto">Contacto iTalkYou</string>
    <string name="anexo_estado_enlinea"> ( En Linea ) </string>
    <string name="anexo_estado_fueralinea"> ( Fuera Linea ) </string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_enviar">Enviar</string>
    <string name="texto_version">Versión: </string>
    <string name="lbl_marcando">Marcando...</string>
    <string name="olvido_clave">¿Olvido Anexo/Contraseña?</string>
    <string name="hnt_extension">Anexo</string>
    <string name="hnt_clave">Contraseña</string>
    <string name="hnt_numero">Número del Teléfono</string>
    <string name="hnt_email">Email</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_registro">Registrarse</string>
    <string name="lbl_codigo_pais">Codigo del País: </string>
    <string name="msj_error_conexion_internet">No hay conexion a internet</string>
    <string name="msj_descargando_informacion">Descargando informacion</string>
    <string name="msj_actualizando_informacion">Actualizando información</string>
    <string name="msj_error_conexion_ws">No se pudo conectar con el servidor iTalkYou</string>
    <string name="msj_error_producido_servidor">Se produjo un error en el servidor iTalkYou</string>
    <string name="msj_error_llamada">El Servidor de comunicaciones no puede realizar la llamada de verificación en estos momentos.</string>
    <string name="msj_error_datos_incompletos">Datos de la cuenta incompleta</string>
    <string name="msj_error_falta_clave">Debe ingresar la contraseña</string>
    <string name="msj_error_falta_telefono">Debe ingresar el número de télefono correctamente</string>
    <string name="msjis_inicio_sesion">Validando informacion</string>
    <string name="msjis_error_falta_extension">Debe ingresar el anexo</string>
    <string name="msjis_texto_enviar_email">Ingrese la cuenta de correo con la que se registro en iTalkYou web:</string>
    <string name="msjis_error_usuario_no_existe">El usuario no existe</string>
    <string name="msjis_error_recuperar_clave">La cuenta de correo no esta registrado en iTalkYou</string>
    <string name="msjis_error_falta_email">Debe ingresar el email</string>
    <string name="msjis_enviando_mail">Enviando el correo electronico</string>
    <string name="msjis_info_envio_mail">Se ha enviado el correo revise su bandeja</string>
    <string name="titulo_recuperar_clave">Recuperar Contraseña</string>
    <string name="hnt_repetir_clave">Repetir Contraseña</string>
    <string name="hnt_nombre_usuario">Nombre del Usuario</string>
    <string name="lbl_pais_telefono">País Teléfono:</string>
    <string name="lbl_telefono">Teléfono: </string>
    <string name="lbl_clave">Contraseña:</string>
    <string name="lbl_informacion_usuario">Nombre del Usuario:</string>
    <string name="lbl_terminos_politicas">Condiciones de Uso y las Politicas de Privacidad de iTalkYou</string>
    <string name="lbl_acepta_condiciones">Acepto las Condiciones de Uso y las Politicas de Privacidad de iTalkYou </string>
    <string name="lbl_condiciones_uso">Terminos de Uso</string>
    <string name="lbl_politicas_privacidad">Politicas de Privacidad</string>
    <string name="titulo_terminos_condiciones">Condiciones de Uso y Politicas de Privacidad</string>
    <string name="msjrc_error_falta_reclave">Debe reingresar la contraseña</string>
    <string name="msjrc_error_falta_nombre">Debe ingresar el nombre del usuario</string>
    <string name="msjrc_error_claves_diferente">La contraseña no coincide</string>
    <string name="msjrc_error_falta_aceptar_condiciones">Debe aceptar las condiciones de uso y las politicas de privacidad </string>
    <string name="msjrc_error_existe_telefono">El número ya se encuentra registrado</string>
    <string name="msjrc_validando_telefono">Validando datos del telefono</string>
    <string name="msjrc_registrar_usuario">Enviando datos de la cuenta</string>
    <string name="msjrc_validar_pin">Validando el pin enviado</string>
    <string name="msjrc_texto_validar_pin">Presione el boton Enviar para recibir la llamada de validacion</string>
    <string name="titulo_validar_pin">Validar PIN</string>
    <string name="msjrc_realizar_llamada">Llamada en proceso</string>
    <string name="msjrc_error_validar_pin">El pin no se valido con exito</string>
    <string name="hnt_pin">Pin</string>
    <string name="lbl_nombre">Nombre:</string>
    <string name="lbl_pin">Pin:</string>
    <string name="lbl_pais">País:</string>
    <string name="lbl_registar_correo">Registrar una cuenta de correo:</string>
    <string name="lbl_idioma">Idioma:</string>
    <string name="lbl_cambiar_clave">Cambiar Contraseña</string>
    <string name="btn_actualizar">Actualizar Informacion</string>
    <string name="lbl_celda_galeria">Galeria</string>
    <string name="lbl_celda_camara">Camara</string>
    <string name="titulo_seleccionar">Seleccionar</string>
    <string name="lbl_tipo_notificacion">Sonido de Notificacion</string>
    <string name="lbl_notificacion_sonido">Con Sonido</string>
    <string name="lbl_notificacion_sin_sonido">Sin Sonido</string>
    <string name="lbl_notificacion_vibrador">Vibrador</string>
    <string name="lbl_clave_datos">Ingresar los datos </string>
    <string name="hnt_clave_actual">Contraseña Actual</string>
    <string name="hnt_clave_nueva">Nueva Contraseña</string>
    <string name="hnt_clave_confirmar">Confirmar Contraseña</string>
    <string name="titulo_cambiar_clave">Cambiar Contraseña</string>
    <string name="texto_camara">Camara</string>
    <string name="texto_galeria">Galeria</string>
    <string name="msjcp_error_falta_pin">Debe ingresar el pin</string>
    <string name="msjcp_error_falta_clave_actual">Debe ingresar su contraseña actual</string>
    <string name="msjcp_error_falta_clave_nueva">Debe ingresar su nueva contraseña</string>
    <string name="msjcp_error_falta_clave_confirmar">Debe ingresar su nueva contraseña para confirmar</string>
    <string name="msjcp_error_falta_datos_clave">Datos Incompletos</string>
    <string name="msjcp_error_correo_existente">El correo ya existe registrar otro correo</string>
    <string name="msjcp_info_cambio_clave">Se ha realizado el cambio de contraseña con exito</string>
    <string name="msjcp_enviando_cambio_clave">Registrando el cambio de contraseña</string>
    <string name="msjcp_enviando_actualizar_perfil">Actualizando la informacion del usuario</string>
    <string name="msjcp_info_actualizar_perfil">La actualizacion de los datos se ha realizado con exito</string>
    <string name="hnt_buscar_contactos">Buscar contactos</string>
    <string name="lbl_contactos">Contactos</string>
    <string name="lbl_anexo">Anexo</string>
    <string name="lbl_nombres">Nombre</string>
    <string name="lbl_correo">Correo</string>
    <string name="hnt_filtro_busqueda">Ingresar dato</string>
    <string name="lbl_numeros_telefonicos">Telefonos</string>
    <string name="texto_llamada_gratis">Llamada Gratis</string>
    <string name="texto_llamada_pago">Llamada con Costo</string>
    <string name="texto_enviar_sms">Enviar SMS</string>
    <string name="msjbc_enviando_consulta_contactos">Obteniendo contactos iTalkYou</string>
    <string name="msjbc_error_falta_dato">Debe ingresar el dato</string>
    <string name="msjbc_no_hay_coincidencia">No hay datos coincidentes</string>
    <string name="lbl_datos_llamada">datos</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_llamar">llamar</string>
    <string name="btn_speaker">Altavoz</string>
    <string name="lbl_numero">Numero:</string>
    <string name="lbl_tipo">Tipo:</string>
    <string name="llamada_entrando">Llamada Entrante</string>
    <string name="lbl_seleccione_pais">Seleccione el pais del contacto:</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_SMS">+SMS</string>
    <string name="btn_borrar">Borrar</string>
    <string name="lbl_saldo_actual">Tu saldo actual es:</string>
    <string name="hnt_marcador">Número telefónico</string>
    <string name="titulo_sms">Mensaje SMS</string>
    <string name="msj_enviando_sms">Enviando SMS</string>
    <string name="msj_enviar_sms">Se envio el SMS</string>
    <string name="msj_error_enviar_sms">No se envio el SMS por falta de saldo</string>
    <string name="msj_texto_sms">Ingrese el mensaje SMS:</string>
    <string name="msj_error_falta_mensaje">Debe ingresar el mensaje</string>
    <string name="titulo_cerrar_sesion">Cerrar Sesion</string>
    <string name="msj_cerrar_sesion">¿Esta seguro que desea cerrar la sesion de la cuenta?</string>
    <string name="msj_cerrando_sesion">Cerrando Sesion .....</string>
    <string name="prefijo_moneda">US$ </string>
    <string name="btn_comprar">Comprar </string>
    <string name="lbl_historial_saldo">Historial de Saldo: </string>
    <string name="msj_obtener_historial_saldo">Obteniendo historial de saldo</string>
    <string name="titulo_fecha_movimiento">Fecha </string>
    <string name="titulo_monto_movimiento">Monto </string>
    <string name="titulo_descripcion_movimiento">Descripcion </string>
    <string name="texto_monto">Italkyou Monto</string>
    <string name="hnt_monto">US$</string>
    <string name="titulo_comprar_saldo">PayPal</string>
    <string name="msj_texto_compra_saldo">Ingrese el monto:</string>
    <string name="msjis_error_falta_monto">Debe ingresar el monto</string>
    <string name="msj_compra_exito">Se realizo la compra con exito</string>
    <string name="msj_cancelar_compra">El usuario cancelo la compra</string>
    <string name="msj_compra_invalida">La compra es invalida</string>
    <string name="lbl_fecha_inicio">Fecha Inicio:</string>
    <string name="lbl_fecha_fin">Fecha Fin:</string>
    <string name="btn_redireccionar">Grabar</string>
    <string name="msj_error_fechas">La fecha de inicio debe ser menor que la fecha final</string>
    <string name="msj_redireccionar_exito">El anexo fue redireccionado al numero indicado</string>
    <string name="msj_redireccionar_invalido">El anexo no existe no se pudo redireccionar</string>
    <string name="msj_enviando_informacion">Enviando los datos ....</string>
    <string name="msj_obtener_historial_Llamadas">Obteniendo historial de llamadas</string>
    <string name="msj_eliminando_llamadas">Eliminando llamadas</string>
    <string name="msj_eliminar_llamadas">Se elimino la(s) llamada(s) con exito</string>
    <string name="msj_error_eliminar_llamadas">No se elimino todas las llamadas seleccionadas</string>
    <string name="msj_eliminando_mensajes">Eliminando mensajes de voz</string>
    <string name="msj_eliminar_mensajes">Se elimino el(los) mensaje(s) con exito</string>
    <string name="lbl_fecha_sms">Fecha: </string>
    <string name="lbl_hora_sms">Hora/Minutos:</string>
    <string name="lbl_agendar_mensaje">Desea agendar su mensaje</string>
    <string name="menu_acc_archive_chat">Archivar</string>
</resources>