<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/fondo_login"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <LinearLayout
	        android:id="@+id/lnlyImagen"
	        android:layout_width="wrap_content"
	        android:layout_height="130dip"
			android:gravity="center"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:orientation="vertical" >

	        <ImageView
	            android:id="@+id/imgLogo"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
				android:src="@drawable/small_logo"
                android:contentDescription="@string/app_name"/>
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/lnlyDatos"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/lnlyImagen"
	        android:layout_marginTop="10dp"
	        android:orientation="vertical" >

	        <EditText
	            android:id="@+id/etExtension"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/hnt_extension"
	            android:inputType="number" >

	            <requestFocus />
	        </EditText>

	        <EditText
	            android:id="@+id/etClave"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:ems="10"
	            android:hint="@string/hnt_clave"
	            android:inputType="textPassword" />
<!--
	        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_codigo_pais"
                    android:layout_marginTop="10dp" />

	        <Spinner
	            android:id="@+id/spPaises"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />

	        <EditText
	        android:id="@+id/etTelefono"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/hnt_numero"
	        android:inputType="phone" /> -->
	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/lnlyBotones"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lnlyDatos"
	        android:layout_below="@+id/lnlyDatos"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="20dp"
	        android:gravity="center_horizontal"
	        android:orientation="horizontal"
            >

	        <Button
	            android:id="@+id/btnEntrar"
	            style="@style/styleBtnTexto"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:background="@drawable/button_selector"
	            android:text="@string/btn_entrar" />

	        <Button
	            android:id="@+id/btnRegistro"
	            style="@style/styleBtnTexto"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="0.5"
	            android:background="@drawable/button_selector"
	            android:text="@string/btn_registro" />

	    </LinearLayout>

	    <LinearLayout
	        android:id="@+id/lnlyClave"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/lnlyBotones"
	        android:layout_below="@+id/lnlyBotones"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:gravity="center_horizontal"
	        android:orientation="vertical" >

            <TextView
	            android:id="@+id/tvOlvidoClave"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
				android:visibility="visible"
	            android:text="@string/olvido_clave"
	            android:textColor="@color/iTalkYou_Azul_Fuerte"
	            android:linksClickable="true"
	            android:textSize="15sp" />
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_alignParentBottom="true"
        android:text="@string/texto_version"
        android:textColor="@color/pantone_240C"
        android:textSize="14sp"
        android:textStyle="bold"
        android:id="@+id/tvVersion" />

</RelativeLayout>

